# latch

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  build.toml  opencode.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
auth-helper/: Program.cs  auth-helper.csproj
docs/: auth-redesign-plan.md
docs/adr/: 0001-aes-256-gcm.md  0002-kdf-per-auth-method.md
docs/superpowers/plans/: 2026-05-14-architecture-deepening.md
docs/superpowers/specs/: 2026-05-14-architecture-deepening.md
frontend/: bunfig.toml  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  styles.css  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/binaries/: .gitignore  vault-core  vault-core-dev.cmd  vault-core-x86_64-unknown-linux-gnu  vault-core.cmd  vault-core.ps1
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: biometric.rs  lib.rs  oauth.rs  password.rs  password_generator.rs  vault.rs  vault_health.rs
frontend/src-tauri/src/auth/: lockout.rs  method.rs  mod.rs  oauth.rs  password.rs
frontend/src-tauri/src/commands/: credential.rs  generator.rs  health.rs  mod.rs  session.rs  vault.rs
frontend/src-tauri/src/crypto/: aead.rs
frontend/src-tauri/src/vault/: access.rs  entries.rs  mod.rs  provision.rs  rotate.rs  search.rs  storage.rs  workspace.rs
frontend/src-tauri/src/vault_health/: audit.rs  breach_checker.rs  mod.rs
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AuthSelector.tsx  BiometricSignIn.tsx  CommandPalette.tsx  ConfirmationModal.tsx  ErrorBoundary.tsx  LockButton.tsx  MigrateVault.tsx  OAuthSignIn.tsx  PaletteActions.tsx  PaletteInput.tsx  PaletteList.tsx  PasswordGenerator.tsx  Settings.tsx  SetupVault.tsx  StrengthMeter.tsx  UnlockVault.tsx  VaultHealth.tsx
frontend/src/components/ui/: badge.tsx  (+5 more)
frontend/src/hooks/: useClipboardGuard.ts  useKeyboardNav.ts  useKeyboardShortcuts.ts  useSearch.ts  useTheme.ts  useWindowAutoResize.ts
frontend/src/test/: apiClient.test.ts  setup.ts  useDebounce.test.ts
frontend/src/utils/: biometricKeys.ts  favicon.ts
scripts/: build.ps1  build.sh  dev.sh
vault-core/: README.md  pyproject.toml
vault-core/latch_vault/: __init__.py  crypto.py  main.py  storage.py
vault-core/tests/: conftest.py  test_crypto.py  test_main.py  test_storage.py
(+9 files in other folders)
