[package]
name = "app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
argon2 = "0.5"
aes-gcm = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
dirs = "5.0"
hex = "0.4"
uuid = { version = "1.18", features = ["v4"] }
fuzzy-matcher = "0.3"
jsonwebtoken = "9"
sha2 = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"
tauri-plugin-google-auth = "0.5"
tauri-plugin-biometry = "0.2"
dotenvy = "0.15"
zxcvbn = "3.1.0"
sha1 = "0.10.6"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = "3"
